# StarRailCard

./: LICENSE  MANIFEST.in  PKG-INFO  README.md  pyproject.toml  requirements.txt  setup.py
.github/: FUNDING.yml
Examples/: Card.py  HoYoCard.py  api_data.py  cashe.py  character_art.py  character_id.py  color.py  creat.py  creat_profile.py  creat_profile_background.py  get_charter.py  get_info.py  get_link_image.py  is_valid_image.py  save_gif.py  set_lang.py  set_user_font.py  show.py  user_font.py
documentation/: characterImgs.md  characterName.md  creat.md  example.cs  example.js  get_profile.md  save.md  template.md
starrailcard/: __init__.py  client.py  honkaicard.py  requirements.txt  utils.py
starrailcard.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
starrailcard/src/api/: api.py  enka.py  enka_parsed.py  error.py  hoyolab.py  hoyolab_parsed.py
starrailcard/src/data/: avatar.json  element.json  keys.json  paths.json  relict_sets.json  stats.json  weapons.json
starrailcard/src/generator/: style_card.py  style_profile_phone.py  style_relict_score.py  style_ticket.py
starrailcard/src/generators/: author.py  five.py  four.py  one.py  profile.py  relicts.py  tree.py  two.py  two_new.py
starrailcard/src/model/: StarRailCard.py  api_mihomo.py  style.py  ukrainization_model.py  utils_model.py
starrailcard/src/showcase/: client_api.py  config.py  parsed_info.py
starrailcard/src/showcase/parsed/: Enka.py  HoYoLab.py
starrailcard/src/tools/: cache.py  calculator.py  calculators.py  enums.py  git.py  http.py  json_data.py  modal.py  openFile.py  options.py  pill.py  translation.py  translator.py  treePaths.py  ukrainization.py
starrailcard/src/tools/calculator/: stats.py
starrailcard/src/tools/calculator/src/: utils.py
starrailcard/src/tools/calculator/src/assets/: max.json  relic_id.json  rolls.json  score.json
starrailcard/src/tools/pill/: __init__.py  color.py  color_control.py  color_controle.py  diagrama.py  gradient_v2.py  grandiend_v2.py  grandient_v1.py  image_control.py  image_controle.py  style_editor.py  text_control.py  text_controle.py
